--- a/talks/prawo-vs-ai/index.html
+++ b/talks/prawo-vs-ai/index.html
@@ -30,8 +30,6 @@
             <h2>{ <a href="https://4comprehension.com/">4comprehension.com</a> }</h2>
             <h4>WarsawJUG | Vavr | Oracle ACE</h4>
             <h4>Independent Consultant/Trainer</h4>
-            <small>distributed systems | microservices | async | reactive | java</small>
-            <h5><a href="https://x.com/pivovarit">@pivovarit</a></h5>
             <br>
         </section>
 
@@ -211,7 +209,29 @@ Disallow: /sekretny-plik.html
 
         <section>
             <h3>Watermarking</h3>
-            <h5>wprowadzane są cechy, które powodują, że model AI ma mniejszą wartość z treści (np. trudniejsze tokenizacyjnie konstrukcje).</h5>
+            <h5>
+                technika wprowadzania subtelnych, możliwych do
+                wykrycia cech w treści, aby identyfikować jej źródło
+            </h5>
+            <h5>można wykorzystywać do utrudniania tokenizacji </h5>
+        </section>
+
+        <section>
+            <h3>RAG</h3>
+            <h5>
+                Możliwość identyfikacji, które dokumenty zostały pobrane i użyte przez
+                model podczas generowania odpowiedzi.
+            </h5>
+            <h5 class="fragment">... ale <strong>formalnie to nie jest trening modelu</strong>
+            </h5>
+
+            <aside class="notes">
+                co w takim razie z opt out?
+            </aside>
+        </section>
+
+        <section>
+            <h5>jedyna skuteczna metoda: ocena rezultatu</h5>
         </section>
 
         <section>
@@ -230,6 +250,7 @@ Disallow: /sekretny-plik.html
         <section>
             <h5>Gdzie kończą się prawa twórców, a zaczyna dozwolony użytek?</h5>
             <img src="img/opt-out-w-praktyce.png" width="80%" alt="meta-ai"/>
+            <small><small><a href="https://businessinsider.com.pl/wiadomosci/meta-oskarzona-o-pobranie-filmow-dla-doroslych-mialy-trenowac-modele-ai/wgz7vh9">https://businessinsider.com.pl/wiadomosci/meta-oskarzona-o-pobranie-filmow-dla-doroslych-mialy-trenowac-modele-ai/wgz7vh9</a></small></small>
         </section>
 
         <section>
