--- a/talks/prawo-vs-ai/index.html
+++ b/talks/prawo-vs-ai/index.html
@@ -200,7 +200,12 @@ Disallow: /sekretny-plik.html
                 <li>ograniczenia IP i rate limiting</li>
                 <li>dynamiczne generowanie treści / zmiana struktur strony</li>
             </ul>
+
+            <aside class="notes">
+                Completely Automated Public Turing test to tell Computers and Humans Apart
+            </aside>
         </section>
+
 
         <section>
             <img src="img/prompt.jpg" width="80%"/>
@@ -251,14 +256,6 @@ Disallow: /sekretny-plik.html
             <h5>Gdzie kończą się prawa twórców, a zaczyna dozwolony użytek?</h5>
             <img src="img/opt-out-w-praktyce.png" width="80%" alt="meta-ai"/>
             <small><small><a href="https://businessinsider.com.pl/wiadomosci/meta-oskarzona-o-pobranie-filmow-dla-doroslych-mialy-trenowac-modele-ai/wgz7vh9">https://businessinsider.com.pl/wiadomosci/meta-oskarzona-o-pobranie-filmow-dla-doroslych-mialy-trenowac-modele-ai/wgz7vh9</a></small></small>
-        </section>
-
-        <section>
-            ...
-        </section>
-
-        <section>
-            <img src="img/suicide.png" width="60%"/>
         </section>
 
         <section>
