--- a/talks/prawo-vs-ai/index.html
+++ b/talks/prawo-vs-ai/index.html
@@ -48,6 +48,18 @@
             <h5>"Nagła nowość" to efekt skali i popularyzacji, nie samego wynalazku</h5>
         </section>
 
+        <section>
+            <p>Krótka Historia ChatGPT</p>
+            <ul>
+                <li><strong>2018</strong> - GPT</li>
+                <li><strong>2019</strong> - GPT-2</li>
+                <li><strong>2020</strong> - GPT-3: skok jakości dzięki skali</li>
+                <li><strong>2022</strong> - ChatGPT: model dialogowy dla każdego</li>
+                <li><strong>2023</strong> - GPT-4</li>
+                <li><strong>2024</strong> - GPT-4o</li>
+                <li><strong>2025+</strong> - GPT-5.x</li>
+            </ul>
+        </section>
 
         <section>
             <img src="img/bubble.png" width="80%"/>
