--- a/talks/learn-from-go/index.html
+++ b/talks/learn-from-go/index.html
@@ -29,10 +29,13 @@
 
         <section>
             <h2>{ <a href="https://4comprehension.com/">4comprehension.com</a> }</h2>
-            <h4>WarsawJUG | Vavr Leader | Oracle ACE</h4>
+            <h4>Vavr Lead | Java Champion | Oracle ACE</h4>
+
             <h4>Independent Consultant/Trainer</h4>
             <small>distributed systems | microservices | async | reactive | java | idiomatic go</small>
             <h5><a href="https://twitter.com/pivovarit">@pivovarit</a></h5>
+            <img src="img/jc.png" width="20%" alt="gopher"/><br>
+
             <br>
         </section>
 
